--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body{
     background-color:rgb(10, 25, 47);
 }
 
+
+
 header{
     position: fixed;
     top: 0;
@@ -19,7 +21,9 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 100px;
+    padding: 30px 100px;
+    z-index: 100000;
+    transition: 0.5s;
 }
 
 header .logo {
@@ -37,6 +41,7 @@ header ul {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 20px;
 }
 
 header ul li {
@@ -47,11 +52,11 @@ header ul li {
 header ul li a{
     position: relative;
     margin: 0 15px;
-    text-decoration: none;
+    text-decoration: none !important;
     letter-spacing: 2px;
     color: #6c7fc5;
-    font-weight: 500px;
-    transition: 0.3s;
+    font-weight: 600;
+    transition: 0.6s;
 }
 
 header ul li a:hover{
@@ -73,3 +78,18 @@ header ul li:after {
     background: #fff;
   }
 
+  header.sticky{
+      padding: 5px 100px;
+      background-color: rgb(10, 25, 47);;
+      -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+      -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+      box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+  }
+
+  header.sticky ul{
+    padding-top: 20px;
+  }
+
+  .nice{
+      margin-top: 200px;
+  }
