--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding:0;
     box-sizing: border-box;
+    color: #fff;
 }
 
 body{
@@ -21,7 +22,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 100px;
+    padding: 30px 120px;
     z-index: 100000;
     transition: 0.5s;
 }
@@ -79,7 +80,7 @@ header ul li:after {
   }
 
   header.sticky{
-      padding: 5px 100px;
+      padding: 5px 120px;
       background-color: rgb(10, 25, 47);;
       -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
       -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
@@ -92,4 +93,20 @@ header ul li:after {
 
   .nice{
       margin-top: 200px;
+  }
+
+  .name{
+      font-size:3em;
+      font-weight: 600;
+  }
+
+  .headline{
+    font-size:2em;
+    font-weight: 700;
+  }
+
+  .intro{
+    width: 50%;
+    text-align: justify;
+
   }
