--- a/style.css
+++ b/style.css
@@ -102,12 +102,14 @@ li{
       font-size:5em;
       font-weight: 900;
       letter-spacing: 2px;
+      padding-left: 0px;
   }
 
   .headline{
     font-size:4em;
     font-weight: 700;
     color: #97b0ca;
+    padding-left: 0px;
   }
 
   .intro{
@@ -124,6 +126,73 @@ li{
     border-color:  #789fa5;
 }
   .btn-outline-primary{
-    color: #6c7fc5;
-    border-color:  #6c7fc5;
+    color: #789fa5;
+    border-color:   #789fa5;
 }
+
+.about {
+    margin-top: 400px;
+}
+
+
+.heading {
+    font-weight: 700;
+    color: rgb(204, 194, 194);
+    position: relative;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    width: 100%;
+    white-space: nowrap;
+    font-size: 32px;
+    margin: 10px 0px 40px;
+}
+
+.heading::after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 300px;
+    background-color: rgb(48, 60, 85);
+    position: relative;
+    top: -2px;
+    margin-left: 20px;
+}
+
+.light-text{
+    color: #b7babd;
+    text-align: justify;
+}
+
+.profile-image{
+    height: 350px;
+     width: 350px;
+     opacity: 0.3;
+   
+}
+
+.tech-stack{
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    
+}
+
+.tech-stack li{
+    color: #b7babd;
+}
+.stack-heading{
+    font-weight: 800;
+    font-size: 18px;
+    letter-spacing: 2px;
+    color:#fff !important;
+}
+
+/* .image-overlay{
+    background-color: rgb(0, 0, 0, 0.5);
+    position: fixed;
+    display:none;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+} */
