--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ li{
     border-color:   #789fa5;
 }
 
-.about {
+.section-content {
     margin-top: 400px;
 }
 
@@ -196,3 +196,35 @@ li{
     height: 100%;
     z-index: 2;
 } */
+
+.nav-pills {
+    color:#b7babd !important;
+    background-color: transparent;
+    transition: 0.6s;
+
+}
+
+
+
+.nav-pills .nav-link.active {
+    background-color: transparent !important;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff;
+    border-left: 5px #789fa5 solid;
+    transition: 0.6s;
+}
+
+.nav-pills .nav-link {
+    border-radius: 0px;
+    color: #789fa5;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+.my-list::before {
+    content: "✔";
+    position: absolute;
+    left: 0px;
+    color: rgb(100, 255, 218);
+}
